UpdatePost is also working with prepared statements. Added SRB-test.

--- a/style.css
+++ b/style.css
@@ -17,3 +17,40 @@ main {
 div {
   margin-bottom: 10px;
 }
+
+h1 {
+  font: bold 3em verdana;
+}
+
+h2 {
+  font: 2em verdana;
+  color: grey;
+}
+
+div {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.exceptionMessage {
+  color: red;
+  font-weight: bold;
+}
+
+.tableAction {
+  color: slateblue;   
+  font-weight: bold;
+  font-family: 'Arial';
+}
+
+.th {
+  border: 2px solid maroon;
+}
+
+.td {
+  background-color: lightgrey;
+}
+
+td {
+  min-width: 100px;
+}
